samples/_failures_safe/1761636068_7e35ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82a7fd3b.c: In function ‘main’:
./samples/SAFE/__tmp_82a7fd3b.c:136:9: error: expected declaration or statement at end of input
  136 |         fprintf(stderr, "Input error\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_82a7fd3b.c:136:9: error: expected declaration or statement at end of input
